kube/platform/istio-ingress/base/internal-gateway.yaml
# This gateway is used to serve internal private traffic (e.g. from outside the cluster
# but from within the private network).
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: istio-ingress
spec:
  selector:
    app: internal-ingress-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.internal.00rg.com
