kube/platform/istio-ingress/base/office-gateway.yaml
# This gateway is used to serve back-office traffic.
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: office-gateway
  namespace: istio-ingress
spec:
  selector:
    app: office-ingress-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - office.00rg.com
