kube/platform/istio-ingress/base/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: user-authorization
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: external-ingress-gateway
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["https://aeldridge.au.auth0.com/*"]
    to:
    - operation:
        # Purely for testing purposes, the following paths do not require
        # authentication - all other paths do.
        notPaths:
        - /hello/external
